Refer to ChangeLog for detailed per-file info.

caspar version YYYYmmdd

[Joost van Baal]
- caspar/doc/caspar.azm, caspar/mk/caspar.mk: implement function
  csp_scpmkdir_FUNC (and variable csp_MKDIRP): no longer need to define this
  function in Makefile.
- caspar/doc/caspar.azm: document csp_UHOSTS_SKIP.
- caspar/doc/caspar.azm: document more advanced way of using csp_LOAD: refer
  to $1 in definition of load target, keep loop over hosts implicit.
- caspar/doc/caspar.azm, caspar/doc/csp_helper.azm: various improvements
  in manpages.



caspar version 20101204

[Wessel Dankers]
- caspar/mk/caspar.mk: add $(csp_UHOSTS_SKIP) feature: exclude hosts
- caspar/mk/caspar.mk: combine file lists less clumsily


caspar version 20100624

- Bugfix release
[Wessel Dankers]
- caspar/mk/caspar.mk: fix load-target-as-a-variable didn't work
  because $(call ...) was expanded too early


caspar version 20100223

[Joost van Baal]
- Converted from CVS to git.
  + use git2cl (no longer cvs2cl)
- Add (.so request) manpages for csp_install, csp_scp_keep_mode and csp_sucp.
[Wessel Dankers]
- Fixed "target given more than once in the same rule" errors.
- Caspar now shows each command as it is run, and aborts on errors.
- csp_LOAD values are now defined as variables with $1 being the host
  they push to.


caspar version 20091115

- Renamed caspar(1) to casparize(1).
- Some tweaking on manpages.


caspar version 20091114

- Preliminary manpage csp_helper(1) added, documenting helper scripts
  csp_install, csp_scp_keep_mode and csp_sucp.  (The separate csp_sucp manpage
  is gone.)
- Adjusted caspar.mk so that it's actually possible to hook csp_install
  and csp_scp_keep_mode into caspar.


caspar version 20090926

- Unstable bleeding edge snapshot release.
- Added (not yet documented) new scripts csp_install and csp_scp_keep_mode,
  allowing for more robust installs.
- Add script caspar(1), for generating caspar-style Makefiles, contributed
  by Jeroen Hoppenbrouwers.